Fri Dec 31 12:48:31 CET 1999  Werner Koch  <wk@gnupg.de>

	* mpicoder.c (mpi_read_from_buffer): Made static.
	(gcry_mpi_print): A buffer of NULL is now allowed to get the required
	length back.
	(mpi_get_keyid): Removed.
	(mpi_print): Made static - should be removed.

Wed Dec  8 21:58:32 CET 1999  Werner Koch  <wk@gnupg.de>

	* Makefile.am (INCLUDES): Add ../gcrypt.

	* g10m.c : Removed.

	* mpicoder.c (mpi_write): Removed.
	(mpi_read): Removed.
	(gcry_mpi_scan): New. Taken from ../gcrypt/mpiapi.c.
	(gcry_mpi_print): Ditto.

	* mpi-pow.c (mpi_powm): Renamed to ...
	(gcry_mpi_powm): ... this.

	* mpiutil.c (gcry_mpi_new): New as a wrapper around the old function.
	Taken from ../gcrypt/mpiapi.c.
	(gcry_mpi_snew): Ditto.
	(gcry_mpi_release): Ditto.
	(gcry_mpi_copy): Ditto.
	(gcry_mpi_set): Ditto.
	(gcry_mpi_set_ui): Ditto.
	(gcry_mpi_cmp): Ditto.
	(gcry_mpi_cmp_ui): Ditto.
	(gcry_mpi_randomize): Ditto.

	* mpicoder.c (mpi_print): Removed the nbit_info kludge.
	* mpi-bits.c (mpi_get_nbits): Replaced the is_protected stuff by
	checking whether it is an opaque mpi and then returns it's length
	in bits.
	* mpiutil.c (mpi_set_opaque): Changed the interface to take a number
	of bits for the length.  Adjusted all users.
	(mpi_get_opaque): Ditto.

Fri Nov 19 17:15:20 CET 1999  Werner Koch  <wk@gnupg.de>

	* mpicoder.c (g10_log_mpidump): Add a temporary workaround

	* mpih-mul.c (mpihelp_mul_n): s/m_is_ecure/g10_is_secure/

	* mpiutil.c (mpi_alloc): Remved the debug mode because it has turned
	out, that this feature was not very useful in the past.  Use the
	new alloc functions.
	(mpi_alloc_secure): Ditto.
	(mpi_alloc_limb_space): Ditto.
	(mpi_free_limb_space): Ditto.
	(mpi_resize): Ditto.
	(mpi_free): Ditto.
	(mpi_set_secure): Removed the debug stuff.
	(mpi_set_opaque): Ditto.
	(mpi_copy): Ditto.
	(mpi_alloc_set_ui): Ditto.
	(mpi_m_check): Use g10_ wrapper.

Mon Aug 30 20:38:33 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* config.links: Add case label for DJGPP
